2006-01-10  Andreas Kupries <andreask@activestate.com>

	* tree.test: Fixed [SF Tcllib Bug 1316061]. Uncluttering test
	  output.

2005-11-02  Andreas Kupries <andreask@activestate.com>

	* graph.tcl (::struct::graph::_serialize): Fixed bug mishandling
	  the serialization of arcs with spaces in their names. Thanks to
	  Spyros Potamianos <spotam@users.sourceforge.net> for bug report
	  and fix. [SF Tcllib Bug 1345967]

2005-10-27  Andreas Kupries <andreask@activestate.com>

	* tree.bench: Added more benchmarks perturbing structure,
	  invalidating caches, to capture true cost of computing results
	  of various methods.

	* tree_tcl.tcl: Reworked the core algorithm used by the method
	  "descendants". Avoiding the shifting of a list speeds it up
	  around 6 times and the factor is going higher as lists grow
	  larger. This makes the dependent methods (height, serialize,
	  children -all) about 2 times faster than they were with the
	  recursive implementation.

	* tree.bench: Extended the benchmarks for "height" and "serialize"
	  to demonstrate that the height limitation is gone.

	* tree_tcl.tcl: Fixed the limitation of the methods "height" and
	  "serialize" when run on deep trees. Moved to an iterative
	  solution using the core algorithm of "descendants". Factored
	  this code into an internal command used throughout. Rewrote
	  method "children -all" to use this command as well.

	  Impact: The limitation are gone, however the performance of
	  "height" and "serialize" has become 2 to 3 times worse.

	* tree.bench: Substantially extended the benchmarks, covering
	  basically everything except tree walks, modifiers, and
	  tree-global attribute search. Had to restrict tests for
	  "height", "serialize", running into problems with deep
	  trees. Recursive implementation fails for interp recursion
	  limit.

2005-10-21  Andreas Kupries <andreask@activestate.com>

	* tree.bench: Made this benchmark suite operational. Incomplete,